feat: cards and cameras

--- a/index.html
+++ b/index.html
@@ -22,5 +22,362 @@
       <button><i class="fa-solid fa-table-cells"></i> Speaker view</button>
       <button><i class="fa-solid fa-arrows-up-down-left-right"></i></button>
     </header>
+
+    <main>
+      <div id="cameras" class="container">
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://fastly.picsum.photos/id/253/600/400.jpg?hmac=L0E5m9T2_sDqxlt9Y8ccJNfK3WH6QbTpDKHo8n_wNPQ"
+            alt="placeholder"
+          />
+          <div class="card-text">
+            <span><i class="fa-solid fa-microphone-slash"></i></span>
+            <span>Pinco Pallo</span>
+          </div>
+        </div>
+      </div>
+
+      <footer></footer>
+    </main>
   </body>
 </html>
