--- a/index.html
+++ b/index.html
@@ -376,8 +376,25 @@
           </div>
         </div>
       </div>
-
-      <footer></footer>
     </main>
+
+    <footer class="footer">
+      <!-- MICROPHONE AND CAMERA-->
+      <div>
+        <div class="footer-container">
+          <div class="container-icons">
+            <div class="icon"><i class="fa-solid fa-microphone"></i></div>
+            <div class="text">Mute</div>
+          </div>
+          <div class="arrow"><i class="fa-solid fa-chevron-up"></i></div>
+
+          <div class="container-icons">
+            <div class="icon"><i class="fa-solid fa-video"></i></div>
+            <div class="text">Stop Video</div>
+          </div>
+          <div class="arrow"><i class="fa-solid fa-chevron-up"></i></div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
